# object_tracking_yolo_deepsort_V1

./: .gitignore  LICENSE  README.md  init_setup.sh  init_setup_MacM1.sh  pyproject.toml  requirements.txt  requirements_dev.yml  setup.cfg  setup.py  template.py  tox.ini  train_deepsort.py
artifacts/prepare_base_model/: detect_sort.py
src/object_tracking_yolo_deepsort_V1/components/: prepare_base_model.py
src/object_tracking_yolo_deepsort_V1/entity/: detect_sort.py
