[metadata]
license= MIT License
license_files= LICENSE
classifier= 
            Programming Language :: Python :: 3.10
            Operating System :: OS Independent
        
[options]
install_requires=
    ensure==1.0.2
python_requires = >=3.7
    

[options.extras_require]
testing= 
        pytest >= 7.1.3 # For testing purposes
        mypy >= 0.971
        flake8 >= 5.0.4 # Checks for un-necessary spaces
        tox>= 3.25.1 # Creating different environment to test/work in parallel
        black>=22.8.0 # For formatting application

[options.package_data]
object_tracking_yolo_deepsort_V1= py.typed # Ignore pytyped errors

[flake8]
max-line-length= 350 # maximum character line length
exclude= __init__.py # Exclude debuggings of file types
